Docs: refresh swagger docs
